Filled in methods in components, toppings, and food